src/objects/inscor__RFQ_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Alternate_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>RFQ_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_Currency__c</fullName>
        <label>Company Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Line_Total__c</fullName>
        <formula>inscor__Company_Unit_Price__c *  inscor__Quantity_Requested__c</formula>
        <label>Company Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Unit_Price__c</fullName>
        <formula>inscor__Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code_Quoted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code Quoted</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipName>RFQ_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipName>RFQ_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Core_Due__c</fullName>
        <label>Core Due (In Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Created_From_CQ_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created From CQ Line</label>
        <referenceTo>inscor__Customer_Quote_Line__c</referenceTo>
        <relationshipName>RFQ_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Cycles__c</fullName>
        <label>Cycles</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Delivery__c</fullName>
        <label>Delivery</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Type__c</fullName>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/OH Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/SV Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/Repairable Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Total__c</fullName>
        <formula>inscor__Price__c  * inscor__Quantity_Quoted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Need_by_date__c</fullName>
        <label>Need by date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Company_Price__c</fullName>
        <formula>inscor__Outright_Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outright Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Price__c</fullName>
        <label>Outright Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number_Keyword__c</fullName>
        <formula>inscor__Product__r.inscor__Keyword__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number Keyword</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Product_Quoted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number Quoted</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>RFQ_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>RFQ_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Quoted__c</fullName>
        <label>Quantity Quoted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Requested__c</fullName>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quoted_Date__c</fullName>
        <label>Quoted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Number__c</fullName>
        <label>RFQ Number</label>
        <referenceTo>inscor__RFQ__c</referenceTo>
        <relationshipName>RFQ_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Rate_Date__c</fullName>
        <label>Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Tag_Date__c</fullName>
        <label>Tag Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Tagged_By__c</fullName>
        <label>Tagged By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Times__c</fullName>
        <label>Times</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Trace__c</fullName>
        <label>Trace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Type_Quoted__c</fullName>
        <label>Type Quoted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outright</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Rental / Lease</fullName>
                </value>
                <value>
                    <fullName>Non Stock</fullName>
                </value>
                <value>
                    <fullName>No Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Type_Requested__c</fullName>
        <label>Type Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outright</fullName>
                    <default>true</default>
                    <label>Outright</label>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Rental / Lease</fullName>
                </value>
                <value>
                    <fullName>Non Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Validity_Period_Days__c</fullName>
        <label>Validity Period (Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Vendor_Reference__c</fullName>
        <label>Vendor Reference #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Warranty__c</fullName>
        <label>Warranty</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>RFQ Line</label>
    <nameField>
        <displayFormat>RFQL-{0}</displayFormat>
        <label>RFQ Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQ Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Delivery_days_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Delivery__c &lt; 0</errorConditionFormula>
        <errorDisplayField>inscor__Delivery__c</errorDisplayField>
        <errorMessage>Delivery days cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Need_By_Date_cannot_be_in_the_past</fullName>
        <active>false</active>
        <errorConditionFormula>inscor__Need_by_date__c &lt; today()</errorConditionFormula>
        <errorMessage>Need By Date cannot be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Part_Number_Required</fullName>
        <active>false</active>
        <errorConditionFormula>inscor__Product__c == null</errorConditionFormula>
        <errorMessage>Part Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Validity_period_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Validity_Period_Days__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>inscor__Delivery__c</errorDisplayField>
        <errorMessage>Validity period cannot be negative</errorMessage>
    </validationRules>
</CustomObject>